fix: add server timeouts and optimize build config for Render deployment

--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -2,29 +2,9 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "skipLibCheck": true,
-    "noEmitOnError": false
+    "noEmitOnError": false,
+    "allowJs": true
   },
-  "include": [
-    "src/main.ts",
-    "src/app.module.ts",
-    "src/app.controller.ts",
-    "src/auth/**/*",
-    "src/analytics/**/*",
-    "src/ai/**/*",
-    "src/prisma/**/*",
-    "src/cache/**/*",
-    "src/constants/**/*",
-    "src/config/**/*",
-    "src/types/**/*",
-    "src/users/**/*",
-    "src/video-items/**/*",
-    "src/challenges/**/*",
-    "src/marketplace/**/*",
-    "src/lets/**/*",
-    "src/notifications/**/*",
-    "src/study-rooms/**/*",
-    "src/common/**/*"
-  ],
   "exclude": [
     "node_modules",
     "dist",
@@ -32,11 +12,11 @@
     "**/*spec.ts",
     "**/*test.ts",
     "src/e2e/**/*",
-    "src/lib/CoomunityNostrClient.ts",
-    "src/lib/aiQuestionGenerator.ts",
+    "src/generated/**/*",
+    "src/lib/**/*",
     "src/admin/**/*",
     "src/monitoring/**/*",
-    "src/questions/question-validation.controller.ts",
+    "src/questions/**/*",
     "src/rbac/**/*",
     "src/social/**/*",
     "src/merits-and-wallet/**/*",
