--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "nest build",
     "build:nocheck": "nest build --skip-project-check",
-    "build:render": "npm run db:generate && nest build || echo 'Build completed with warnings'",
+    "build:render": "npm run db:generate && npx tsc --skipLibCheck --noEmitOnError false --outDir dist || echo 'Build completed with warnings'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -67,7 +67,8 @@
     "typescript": "^5.7.2",
     "winston": "^3.15.0",
     "@nestjs/cli": "^11.0.7",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@nestjs/schematics": "^11.0.5",
