--- a/backend/package.json
+++ b/backend/package.json
@@ -45,7 +45,9 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
+    "@nestjs/cli": "^11.0.7",
     "@prisma/client": "^5.22.0",
+    "prisma": "^5.22.0",
     "@types/node-fetch": "^2.6.12",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -65,10 +67,7 @@
     "socket.io": "^4.8.1",
     "swagger-ui-express": "^5.0.1",
     "typescript": "^5.7.2",
-    "winston": "^3.15.0",
-    "@nestjs/cli": "^11.0.7",
-    "prisma": "^5.22.0",
-    "bcryptjs": "^2.4.3"
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^11.0.5",
