fix: update Render deployment configuration with Node.js 20 and optimized commands

--- a/backend/package.json
+++ b/backend/package.json
@@ -19,21 +19,21 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "start:render": "npm run db:generate && npm run db:migrate && npm run start:prod",
+    "start:render": "npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:generate": "prisma generate --schema=../prisma/schema.prisma",
-    "db:push": "prisma db push --schema=../prisma/schema.prisma",
-    "db:reset": "prisma migrate reset --force --schema=../prisma/schema.prisma",
+    "db:generate": "npx prisma generate --schema=../prisma/schema.prisma",
+    "db:push": "npx prisma db push --schema=../prisma/schema.prisma",
+    "db:reset": "npx prisma migrate reset --force --schema=../prisma/schema.prisma",
     "db:seed": "npx ts-node ../prisma/seed.ts",
-    "db:studio": "prisma studio --schema=../prisma/schema.prisma",
-    "db:migrate": "prisma migrate deploy --schema=../prisma/schema.prisma",
-    "migration:generate": "prisma migrate dev --schema=../prisma/schema.prisma",
-    "migration:deploy": "prisma migrate deploy --schema=../prisma/schema.prisma"
+    "db:studio": "npx prisma studio --schema=../prisma/schema.prisma",
+    "db:migrate": "npx prisma migrate deploy --schema=../prisma/schema.prisma",
+    "migration:generate": "npx prisma migrate dev --schema=../prisma/schema.prisma",
+    "migration:deploy": "npx prisma migrate deploy --schema=../prisma/schema.prisma"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
