--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,12 @@
   "scripts": {
     "build": "nest build",
     "build:nocheck": "nest build --skip-project-check",
-    "build:render": "npm run db:generate && npx tsc --skipLibCheck --noEmitOnError false --outDir dist || echo 'Build completed with warnings'",
+    "build:render": "npm install prisma@latest --save-dev --legacy-peer-deps && npx prisma generate --schema=../prisma/schema.prisma && npx tsc --skipLibCheck --noEmitOnError false --outDir dist && cp -r src/generated dist/backend/src/ && echo 'Build completed successfully'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/backend/src/main",
     "start:render": "npm run start:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -36,6 +36,7 @@
     "migration:deploy": "npx prisma migrate deploy --schema=../prisma/schema.prisma"
   },
   "dependencies": {
+    "@nestjs/cli": "^11.0.7",
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
     "@nestjs/jwt": "^10.2.0",
@@ -45,9 +46,7 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
-    "@nestjs/cli": "^11.0.7",
     "@prisma/client": "^5.22.0",
-    "prisma": "^5.22.0",
     "@types/node-fetch": "^2.6.12",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -84,6 +83,7 @@
     "eslint": "^9.15.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
+    "prisma": "^6.10.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
