--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,13 @@
   "scripts": {
     "build": "nest build",
     "build:nocheck": "nest build --skip-project-check",
-    "build:render": "npx prisma generate --schema=../prisma/schema.prisma || echo 'Prisma generation skipped' && npx tsc --skipLibCheck --noEmitOnError false --outDir dist && echo 'Build completed successfully'",
+    "build:render": "echo 'Starting build...' && npx --yes prisma@5.20.0 generate --schema=../prisma/schema.prisma && npx tsc --skipLibCheck --noEmitOnError false --outDir dist && echo 'Build completed successfully'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/backend/src/main",
-    "start:render": "node dist/main.js || node dist/backend/src/main.js || node dist/src/main.js",
+    "start:render": "node dist/backend/src/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
