--- a/Demo/apps/superapp-unified/vercel.json
+++ b/Demo/apps/superapp-unified/vercel.json
@@ -4,14 +4,32 @@
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist",
   "installCommand": "npm install --legacy-peer-deps",
+  "nodeVersion": "18.x",
+  "functions": {
+    "app/api/**/*.js": {
+      "maxDuration": 30
+    }
+  },
   "rewrites": [
     {
       "source": "/((?!api).*)",
       "destination": "/index.html"
     }
   ],
+  "headers": [
+    {
+      "source": "/sw.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=0, must-revalidate"
+        }
+      ]
+    }
+  ],
   "env": {
     "NODE_ENV": "production",
-    "VITE_APP_ENV": "production"
+    "VITE_APP_ENV": "production",
+    "NODE_OPTIONS": "--max-old-space-size=4096"
   }
 }
