fix(backend): Pin prisma version and fix render build script
Pinned prisma version to 6.10.1 in backend/package.json to prevent version mismatches during deployment.

Added 'npm install --legacy-peer-deps' to the 'build:render' script to ensure all dependencies are installed before prisma generate is called.

This should resolve the 'npm i prisma@6.10.1 -D --silent' failure on Render.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "nest build",
     "build:nocheck": "nest build --skip-project-check",
-    "build:render": "echo 'Starting Render build...' && npx prisma generate --schema=../prisma/schema.prisma && echo 'Prisma client generated' && npx tsc --noEmit false --skipLibCheck --noEmitOnError false --target ES2020 --module commonjs --outDir dist --experimentalDecorators --emitDecoratorMetadata --esModuleInterop --allowSyntheticDefaultImports --resolveJsonModule --allowJs --strict false --noImplicitAny false --strictNullChecks false src/**/*.ts && echo 'Build completed successfully'",
+    "build:render": "echo 'Starting Render build...' && npm install --legacy-peer-deps && npm run db:generate && echo 'Prisma client generated' && npx tsc --noEmit false --skipLibCheck --noEmitOnError false --target ES2020 --module commonjs --outDir dist --experimentalDecorators --emitDecoratorMetadata --esModuleInterop --allowSyntheticDefaultImports --resolveJsonModule --allowJs --strict false --noImplicitAny false --strictNullChecks false src/**/*.ts && echo 'Build completed successfully'",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -83,7 +83,7 @@
     "eslint": "^9.15.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.10.1",
+    "prisma": "6.10.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
