--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,16 +1,21 @@
 {
   "recommendations": [
-    "davidanson.vscode-markdownlint",
-    "yzhang.markdown-all-in-one",
-    "bierner.markdown-mermaid",
-    "ms-vscode.vscode-typescript-next",
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
     "bradlc.vscode-tailwindcss",
+    "ms-vscode.vscode-typescript-next",
     "formulahendry.auto-rename-tag",
     "christian-kohler.path-intellisense",
-    "ms-vscode.vscode-json"
+    "ms-vscode.vscode-json",
+    "redhat.vscode-yaml",
+    "ms-playwright.playwright",
+    "ms-vscode.vscode-eslint",
+    "yzhang.markdown-all-in-one",
+    "github.vscode-pull-request-github",
+    "ms-vscode.vscode-typescript-next"
   ],
   "unwantedRecommendations": [
-    "ms-vscode.vscode-markdown",
-    "shd101wyy.markdown-preview-enhanced"
+    "hookyqr.beautify",
+    "ms-vscode.vscode-css-peek"
   ]
-} 
+}
