--- a/backend/Dockerfile.railway
+++ b/backend/Dockerfile.railway
@@ -1,38 +1,48 @@
-# Ultra-simplified Railway Dockerfile for CoomÜnity Backend
-FROM node:18-alpine
+# 🚂 CoomÜnity Backend - Dockerfile for Railway
+# Optimized for Node.js 18 + NestJS + Prisma + PostgreSQL
 
-# Install all necessary dependencies
-RUN apk add --no-cache curl python3 make g++
+FROM node:18-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files
+# Install system dependencies for Prisma
+RUN apk add --no-cache \
+    libc6-compat \
+    openssl \
+    ca-certificates \
+    curl
+
+# Copy package files for better Docker layer caching
 COPY package*.json ./
-COPY tsconfig*.json ./
+COPY prisma ./prisma/
 
-# Install ALL dependencies (including dev dependencies for build)
-RUN npm ci
-
-# Copy source code
-COPY src/ ./src/
-COPY prisma/ ./prisma/
+# Install dependencies with legacy peer deps
+RUN npm install --legacy-peer-deps && npm cache clean --force
 
 # Generate Prisma client
 RUN npx prisma generate
 
+# Copy source code
+COPY . .
+
 # Build the application
 RUN npm run build
 
-# Remove dev dependencies to optimize final image
-RUN npm prune --production
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs && \
+    adduser -S nestjs -u 1001
 
-# Expose port
-EXPOSE 3002
+# Change ownership of app directory
+RUN chown -R nestjs:nodejs /app
+USER nestjs
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-  CMD curl -f http://localhost:3002/health || exit 1
+# Railway uses PORT environment variable
+EXPOSE $PORT
 
-# Start the application
-CMD ["node", "dist/main.js"]
+# Health check for Railway
+HEALTHCHECK --interval=30s --timeout=10s --start-period=30s --retries=3 \
+  CMD curl -f http://localhost:$PORT/health || exit 1
+
+# Start command optimized for Railway
+CMD ["sh", "-c", "npx prisma db push --accept-data-loss && node dist/main.js"]
