--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,18 +1,6 @@
 {
   "recommendations": [
-    "esbenp.prettier-vscode",
-    "dbaeumer.vscode-eslint",
-    "bradlc.vscode-tailwindcss",
-    "ms-vscode.vscode-typescript-next",
-    "formulahendry.auto-rename-tag",
-    "christian-kohler.path-intellisense",
-    "ms-vscode.vscode-json",
-    "redhat.vscode-yaml",
-    "ms-playwright.playwright",
-    "ms-vscode.vscode-eslint",
-    "yzhang.markdown-all-in-one",
-    "github.vscode-pull-request-github",
-    "ms-vscode.vscode-typescript-next"
+    "denoland.vscode-deno"
   ],
   "unwantedRecommendations": [
     "hookyqr.beautify",
