--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -80,11 +80,12 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/lab": "^7.0.0-beta.4",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^7.1.2",
     "@mui/system": "^7.0.0",
     "@sentry/browser": "^8.55.0",
     "@sentry/react": "^8.55.0",
     "@sentry/vite-plugin": "^3.5.0",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.80.7",
     "@testing-library/react": "^14.3.1",
