--- a/Demo/apps/superapp-unified/.env.production
+++ b/Demo/apps/superapp-unified/.env.production
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=
-VITE_ENABLE_MOCK_AUTH=true
-VITE_ENABLE_MOCK_DATA=true
+# CoomÜnity SuperApp - Producción Vercel
+VITE_API_BASE_URL=https://backend-production-80bb.up.railway.app
+VITE_ENABLE_MOCK_AUTH=false
 VITE_BASE_URL=https://superapp-peach.vercel.app
