--- a/Demo/apps/superapp-unified/vercel.json
+++ b/Demo/apps/superapp-unified/vercel.json
@@ -1,14 +1,25 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install --legacy-peer-deps",
+  "devCommand": "npm run dev",
+  "env": {
+    "VITE_API_BASE_URL": "https://backend-production-80bb.up.railway.app",
+    "VITE_ENABLE_MOCK_AUTH": "false",
+    "VITE_BASE_URL": "https://superapp-peach.vercel.app",
+    "VITE_GA_TRACKING_ID": "G-XXXXXXXXXX",
+    "VITE_HOTJAR_ID": "XXXXXXX",
+    "VITE_ENABLE_ANALYTICS": "true",
+    "VITE_BETA_TRACKING": "true",
+    "VITE_NETWORK_API_URL": "https://backend-production-80bb.up.railway.app",
+    "VITE_NETWORK_BASE_URL": "https://superapp-peach.vercel.app"
+  },
+  "functions": {
+    "app/**": {
+      "maxDuration": 30
     }
-  ],
+  },
   "headers": [
     {
       "source": "/assets/(.*)",
@@ -18,30 +29,19 @@
           "value": "public, max-age=31536000, immutable"
         }
       ]
-    },
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        },
-        {
-          "key": "Referrer-Policy",
-          "value": "strict-origin-when-cross-origin"
-        }
-      ]
     }
   ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "/home",
+      "statusCode": 307
+    }
+  ],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 }
