--- a/Demo/apps/superapp-unified/vercel.json
+++ b/Demo/apps/superapp-unified/vercel.json
@@ -5,14 +5,14 @@
   "installCommand": "npm install --legacy-peer-deps",
   "devCommand": "npm run dev",
   "env": {
-    "VITE_API_BASE_URL": "https://backend-production-80bb.up.railway.app",
+    "VITE_API_BASE_URL": "http://localhost:3002",
     "VITE_ENABLE_MOCK_AUTH": "false",
     "VITE_BASE_URL": "https://superapp-peach.vercel.app",
     "VITE_GA_TRACKING_ID": "G-XXXXXXXXXX",
     "VITE_HOTJAR_ID": "XXXXXXX",
     "VITE_ENABLE_ANALYTICS": "true",
     "VITE_BETA_TRACKING": "true",
-    "VITE_NETWORK_API_URL": "https://backend-production-80bb.up.railway.app",
+    "VITE_NETWORK_API_URL": "http://localhost:3002",
     "VITE_NETWORK_BASE_URL": "https://superapp-peach.vercel.app"
   },
   "functions": {
