--- a/backend/package.json
+++ b/backend/package.json
@@ -46,7 +46,7 @@
     "@nestjs/swagger": "^8.0.6",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^11.1.3",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.10.1",
     "@types/node-fetch": "^2.6.12",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -83,7 +83,7 @@
     "eslint": "^9.15.0",
     "jest": "^29.7.0",
     "prettier": "^3.4.2",
-    "prisma": "6.10.1",
+    "prisma": "^6.10.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
