--- a/Demo/apps/superapp-unified/.vercelignore
+++ b/Demo/apps/superapp-unified/.vercelignore
@@ -1,51 +1,67 @@
 # Dependencies
 node_modules/
-.npm/
-.yarn/
-
-# Development files
-.env.local
-.env.development
-.env.test
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Development files
+src/
+public/
+*.md
+*.txt
+
 # Testing
-coverage/
-.nyc_output/
 test-results/
 playwright-report/
+coverage/
+.nyc_output/
 
-# Development tools
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# OS files
-.DS_Store
-Thumbs.db
+# Environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Build artifacts (exclude from source, not from deployment)
-.vite/
+# Build artifacts (keep dist/ for deployment)
+# dist/ # Don't ignore - this is needed for deployment
+
+# Logs
+logs/
+*.log
+
+# Temporary files
+.tmp/
+.temp/
+
+# Cache directories
 .cache/
+.parcel-cache/
 
-# Documentation
-README.md
-docs/
-*.md
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Git
 .git/
 .gitignore
 
-# Temporary files
-tmp/
-temp/
-.temp/
+# Vercel
+.vercel
 
-# E2E Tests
-e2e/
-playwright.config.ts
+# TypeScript
+*.tsbuildinfo
+
+# Documentation
+docs/
+README.md
