--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -112,6 +112,7 @@
     "@builder.io/dev-tools": "^1.6.108",
     "@eslint/js": "^9.28.0",
     "@playwright/test": "^1.53.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -119,16 +120,21 @@
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "@vitejs/plugin-react": "^4.5.2",
+    "@vitest/pretty-format": "^2.1.9",
     "autoprefixer": "^10.4.21",
+    "es-module-lexer": "^1.7.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "expect-type": "^1.2.1",
     "glob": "^7.2.3",
     "globals": "^16.2.0",
+    "jsdom": "^24.1.3",
     "postcss": "^8.4.48",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "tinyrainbow": "^1.2.0",
     "typescript": "^5.5.3",
     "vite": "^6.3.5",
     "vite-plugin-pwa": "^1.0.0",
