--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -79,6 +79,9 @@
     "@sentry/browser": "^8.55.0",
     "@sentry/react": "^8.55.0",
     "@sentry/vite-plugin": "^3.5.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.76.0",
     "@tanstack/react-query-devtools": "^5.80.7",
     "@testing-library/react": "^14.3.1",
