feat: Force free tier plan in render

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   - type: web
     name: coomunity-superapp
     runtime: node
-    plan: starter
+    plan: free
     buildCommand: npm install --legacy-peer-deps && npm run build
     startCommand: npm run preview
     healthCheckPath: /
