fix(build): Use npx to run vite in monorepo

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -5,10 +5,10 @@
   "description": "CoomÜnity SuperApp - Plataforma Unificada",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode development",
+    "build": "npx vite build --mode development",
     "build:prod": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 200",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "lint:strict": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "vitest",
@@ -32,7 +32,7 @@
     "test:auto": "node scripts/test-with-port-detection.cjs",
     "test:auto:headless": "node scripts/test-with-port-detection.cjs --headless",
     "test:auto:debug": "node scripts/test-with-port-detection.cjs --debug",
-    "test:e2e": "playwright test --project=chromium --headed",
+    "test:e2e": "npx playwright test",
     "test:e2e:headless": "playwright test",
     "test:debug": "playwright test --debug",
     "test:ui": "playwright test --ui",
