--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "build": "turbo run build",
     "lint": "turbo run lint",
     "test": "turbo run test",
-    "test:e2e": "npm run test:e2e --workspace=coomunity-superapp",
+    "test:e2e": "pnpm --filter=coomunity-superapp test:e2e",
+    "test:e2e:ci": "pnpm --filter=coomunity-superapp test:e2e",
+    "test:e2e:report": "pnpm --filter=coomunity-superapp test:e2e:report",
     "clean-vite-cache": "rm -rf node_modules/.vite",
     "clean:backend": "rm -rf dist",
     "clean:processes": "npm run stop:all",
@@ -42,7 +44,8 @@
     "start:backend:compiled": "npm run build:backend && cp -r backend/src/generated dist/ && node dist/main.js",
     "build:backend": "tsc -p tsconfig.backend.json",
     "mock-cleanup-agent": "node scripts/mock-cleanup-background-agent.js",
-    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js"
+    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js",
+    "postinstall": "cd Demo/apps/superapp-unified && npm install --legacy-peer-deps"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
