--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev:backend": "npm run start:backend:dev",
     "dev:frontend": "turbo run dev",
     "dev:superapp": "npm run dev --workspace=coomunity-superapp",
-    "dev:admin": "turbo run dev --filter=@coomunity/admin-frontend",
+    "dev:admin": "npm run dev --workspace=@coomunity/admin-frontend",
     "dev:fullstack": "./scripts/start-all.sh",
     "dev:builder": "cd Demo/apps/superapp-unified && npx builder.io@latest launch",
     "dev:smart": "./scripts/dev-port-manager.sh",
@@ -44,8 +44,7 @@
     "start:backend:compiled": "npm run build:backend && cp -r backend/src/generated dist/ && node dist/main.js",
     "build:backend": "tsc -p tsconfig.backend.json",
     "mock-cleanup-agent": "node scripts/mock-cleanup-background-agent.js",
-    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js",
-    "postinstall": "cd Demo/apps/superapp-unified && npm install --legacy-peer-deps"
+    "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
