--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -8,7 +8,7 @@
     "build": "npx vite build --mode development",
     "build:prod": "vite build",
     "preview": "vite preview",
-    "render:build": "npm install --legacy-peer-deps && npx vite build",
+    "render:build": "npm install --legacy-peer-deps --production=false && npx vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "lint:strict": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
