--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "npx vite build --mode development",
     "build:prod": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview --host --port 3001",
     "render:build": "npm install --legacy-peer-deps --production=false && npx vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
