--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -8,7 +8,7 @@
     "build": "npx vite build --mode development",
     "build:prod": "vite build",
     "preview": "vite preview --host --port 3001",
-    "render:build": "npm install --legacy-peer-deps --production=false && npx vite build",
+    "render:build": "npm install --legacy-peer-deps && npx vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "lint:strict": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
@@ -110,7 +110,15 @@
     "use-sync-external-store": "^1.5.0",
     "web-vitals": "^4.2.4",
     "zod": "^3.25.67",
-    "zustand": "^4.5.7"
+    "zustand": "^4.5.7",
+    "vite": "^6.3.5",
+    "@vitejs/plugin-react": "^4.5.2",
+    "typescript": "^5.5.3",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.48",
+    "autoprefixer": "^10.4.21",
+    "vite-plugin-pwa": "^1.0.0",
+    "vite-plugin-node-polyfills": "^0.22.0"
   },
   "devDependencies": {
     "@builder.io/dev-tools": "^1.6.108",
@@ -123,9 +131,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
-    "@vitejs/plugin-react": "^4.5.2",
     "@vitest/pretty-format": "^2.1.9",
-    "autoprefixer": "^10.4.21",
     "es-module-lexer": "^1.7.0",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -134,15 +140,10 @@
     "glob": "^7.2.3",
     "globals": "^16.2.0",
     "jsdom": "^24.1.3",
-    "postcss": "^8.4.48",
     "rollup-plugin-visualizer": "^6.0.3",
-    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "tinyrainbow": "^1.2.0",
-    "typescript": "^5.5.3",
-    "vite": "^6.3.5",
-    "vite-plugin-pwa": "^1.0.0",
-    "vitest": "^2.1.1",
+    "vite-plugin-pwa": "^0.20.0",
     "workbox-window": "^7.3.0"
   }
 }
