fix(deploy): use 'serve' for production static server on Render

--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -8,7 +8,8 @@
     "prebuild": "npm cache clean --force",
     "build": "npx vite build --mode development",
     "build:prod": "vite build",
-    "preview": "vite preview --host --port 3001",
+    "start": "serve -s dist -l 3001",
+    "preview": "serve -s dist -l 3001",
     "render:build": "npm install --legacy-peer-deps && npx vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
@@ -107,6 +108,7 @@
     "recharts": "^2.15.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
+    "serve": "^14.2.3",
     "tailwind-merge": "^2.6.0",
     "use-sync-external-store": "^1.5.0",
     "web-vitals": "^4.2.4",
