--- a/render.yaml
+++ b/render.yaml
@@ -33,11 +33,8 @@ services:
           name: coomunity-db
           property: connectionString
         key: DATABASE_URL
-      - fromService:
-          type: redis
-          name: coomunity-redis
-          property: connectionString
-        key: REDIS_URL
+      - key: REDIS_URL
+        value: "redis://red-d1ain6fdiees73ddnpi0:6379"
       - key: JWT_SECRET
         generateValue: true
       - key: NODE_ENV
