--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -77,7 +77,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/lab": "^7.0.0-beta.4",
-    "@mui/material": "^7.0.0",
+    "@mui/material": "^5.17.1",
     "@mui/system": "^7.0.0",
     "@sentry/browser": "^8.55.0",
     "@sentry/react": "^8.55.0",
@@ -90,6 +90,8 @@
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/dompurify": "^3.0.5",
+    "@vitejs/plugin-react": "^4.5.2",
+    "autoprefixer": "^10.4.21",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
@@ -98,31 +100,29 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.344.0",
     "mathjs": "^14.5.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "postcss": "^8.4.48",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.58.1",
     "react-markdown": "^10.1.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.22.2",
     "recharts": "^2.15.3",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "serve": "^14.2.3",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
-    "serve": "^14.2.3",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.5.3",
     "use-sync-external-store": "^1.5.0",
+    "vite": "^6.3.5",
+    "vite-plugin-node-polyfills": "^0.22.0",
+    "vite-plugin-pwa": "^1.0.0",
     "web-vitals": "^4.2.4",
     "zod": "^3.25.67",
-    "zustand": "^4.5.7",
-    "vite": "^6.3.5",
-    "@vitejs/plugin-react": "^4.5.2",
-    "typescript": "^5.5.3",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8.4.48",
-    "autoprefixer": "^10.4.21",
-    "vite-plugin-pwa": "^1.0.0",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "rollup-plugin-visualizer": "^5.12.0"
+    "zustand": "^4.5.7"
   },
   "devDependencies": {
     "@builder.io/dev-tools": "^1.6.108",
@@ -130,8 +130,8 @@
     "@playwright/test": "^1.53.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.14.1",
