--- a/package.json
+++ b/package.json
@@ -116,19 +116,18 @@
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^8.29.0",
-    "@typescript-eslint/parser": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^1.3.1",
-    "@vitest/ui": "^1.3.1",
-    "eslint": "^9.24.0",
+    "@vitest/pretty-format": "^2.1.9",
+    "es-module-lexer": "^1.7.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "happy-dom": "^17.4.7",
-    "jsdom": "^24.0.0",
     "prettier": "^3.5.3",
     "prisma": "^5.22.0",
     "tsx": "^4.19.4",
@@ -137,7 +136,6 @@
     "typescript-eslint": "^8.24.1",
     "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-pwa": "^1.0.0",
-    "vitest": "^1.3.1"
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
