--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "packageManager": "npm@10.0.0",
   "workspaces": [
+    "backend",
     "Demo/apps/*",
     "apps/*",
     "packages/*"
