--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "dist/main.js",
   "scripts": {
+    "dev": "npm run start:dev",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
