--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.1",
     "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^5.22.0",
+    "@slack/webhook": "^7.0.5",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-query-devtools": "^5.71.10",
     "bcryptjs": "^3.0.2",
@@ -94,6 +96,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.3",
     "nostr-tools": "^2.13.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -123,6 +126,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^4.0.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
