--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "nodenext",
     "declaration": true,
     "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "ES2022",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
     "skipLibCheck": true,
-    "strictNullChecks": false,
+    "strict": false,
     "noImplicitAny": false,
+    "strictNullChecks": false,
+    "noEmitOnError": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
@@ -33,4 +35,4 @@
     "dist",
     "test"
   ]
-} 
+}
